--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1108,19 +1108,19 @@
      "output_type": "stream",
      "text": [
       "      June Temperatures\n",
-      "0                  76.0\n",
-      "1                  74.0\n",
-      "2                  74.0\n",
-      "3                  64.0\n",
-      "4                  64.0\n",
+      "0                  78.0\n",
+      "1                  76.0\n",
+      "2                  78.0\n",
+      "3                  76.0\n",
+      "4                  77.0\n",
       "...                 ...\n",
-      "1512               71.0\n",
-      "1513               71.0\n",
-      "1514               69.0\n",
-      "1515               65.0\n",
-      "1516               65.0\n",
+      "1695               79.0\n",
+      "1696               74.0\n",
+      "1697               74.0\n",
+      "1698               76.0\n",
+      "1699               75.0\n",
       "\n",
-      "[1517 rows x 1 columns]\n"
+      "[1700 rows x 1 columns]\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>June Temperatures</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1197,18 +1197,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                 0\n",
-       "count  1700.000000\n",
-       "mean     74.944118\n",
-       "std       3.257417\n",
-       "min      64.000000\n",
-       "25%      73.000000\n",
-       "50%      75.000000\n",
-       "75%      77.000000\n",
-       "max      85.000000"
+       "       June Temperatures\n",
+       "count        1700.000000\n",
+       "mean           74.944118\n",
+       "std             3.257417\n",
+       "min            64.000000\n",
+       "25%            73.000000\n",
+       "50%            75.000000\n",
+       "75%            77.000000\n",
+       "max            85.000000"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>Dec Temperatures</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1354,18 +1354,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                 0\n",
-       "count  1517.000000\n",
-       "mean     71.041529\n",
-       "std       3.745920\n",
-       "min      56.000000\n",
-       "25%      69.000000\n",
-       "50%      71.000000\n",
-       "75%      74.000000\n",
-       "max      83.000000"
+       "       Dec Temperatures\n",
+       "count       1517.000000\n",
+       "mean          71.041529\n",
+       "std            3.745920\n",
+       "min           56.000000\n",
+       "25%           69.000000\n",
+       "50%           71.000000\n",
+       "75%           74.000000\n",
+       "max           83.000000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,13 +1374,6 @@
     "# 9. Calculate and print out the summary statistics for the Decemeber temperature DataFrame.\n",
     "df.describe()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
